include guile.am

SOURCES= \
  netlink/connection.scm \
  netlink/constant.scm \
  netlink/data.scm \
  netlink/message.scm \
  netlink/standard.scm \
  netlink/deserialize.scm \
  netlink/route/addr.scm \
  netlink/route/attrs.scm \
  netlink/route/link.scm \
  netlink/route/route.scm

info_TEXINFOS= doc/guile-netlink.texi
