include guile.am

SOURCES= \
  netlink/connection.scm \
  netlink/constant.scm \
  netlink/data.scm \
  netlink/error.scm \
  netlink/message.scm \
  netlink/standard.scm \
  netlink/deserialize.scm \
  netlink/route.scm \
  netlink/route/addr.scm \
  netlink/route/attrs.scm \
  netlink/route/link.scm \
  netlink/route/route.scm \
  ip/addr.scm \
  ip/link.scm \
  ip/route.scm \
  ip/utils.scm

info_TEXINFOS= doc/guile-netlink.texi
